# homework_template_ngupta2

./: README.md  postbuild.sh  pyproject.toml
.devcontainer/: devcontainer.json
homework_submissions/: hw2_python_exercises.ipynb  hw3_pt1_numpy_exercises.ipynb  hw3_pt2_matplotlib_exercises.ipynb  hw4_pandas_exercises.ipynb  hw5_geopandas_exercises.ipynb  hw6_xarray_exercises.ipynb  hw7_xarray_exercises_ii.ipynb  test_csv_run.ipynb
homework_submissions/data/arizona_huc8_shapefile/: WBDHU8.dbf  WBDHU8.sbn  WBDHU8.shx
homework_submissions/data/homework_submissions/arizona_huc8_shapefile/: WBDHU8.sbx  WBDHU8.shp.xml
