[project]
name = "has-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adlfs>=2024.12.0",
    "aiohttp>=3.12.15",
    "cartopy>=0.25.0",
    "dask>=2025.7.0",
    "fiona>=1.10.1",
    "fsspec>=2025.7.0",
    "gcsfs>=2025.7.0",
    "geopandas>=1.1.1",
    "geoviews>=1.14.1",
    "h5netcdf>=1.6.4",
    "holoviews>=1.21.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.5",
    "netcdf4>=1.7.2",
    "numpy>=2.3.2",
    "pooch>=1.8.2",
    "pyogrio>=0.11.1",
    "pystac-client>=0.9.0",
    "rioxarray>=0.19.0",
    "s3fs>=2025.7.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "statsmodels>=0.14.5",
    "xarray>=2025.8.0",
    "zarr>=3.1.2",
]
